Registering selftest marker for unit tests
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: I71a07accf941b8effec466772ace5811d5aaad17
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/7564
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/unittests/pytest.ini
+++ b/unittests/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 addopts = --html=report.html -rA --junit-xml=report.xml
 junit_family=xunit1
+markers =
+    selftest: One of Board Farm's self tests.
