requirements: adding cdrouter bug reference for marshmallow pkg
Signed-off-by: chsharma <chsharma.contractor@libertyglobal.com>
Change-Id: I80b8cc6d605ec4f193320102418ded551bf66ccd
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/7581
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Filippo Carra <fcarra@libertyglobal.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ future
 ipaddress
 jira
 jsonschema
-marshmallow<3
+marshmallow<3 #required for cdrouter https://github.com/qacafe/cdrouter.py/issues/5
 matplotlib
 nested_lookup==0.2.19
 netaddr
