devices: debian: Moved lan and wan functionality to DebianLAN and DebianWAN Classes
Signed-off-by: chetan sharma <chsharma.contractor@libertyglobal.com>
Change-Id: I48caaa45b3d70e9b71452d885eb5da569ee12567
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/6732
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/boardfarm/boardfarm_config_example.json
+++ b/boardfarm/boardfarm_config_example.json
@@ -67,7 +67,7 @@
                         "color": "blue",
                         "img": "bft:node",
                         "name": "wan",
-                        "type": "debian"
+                        "type": "debian_wan"
                     }
                 ],
                 "type": "docker-factory"
@@ -81,14 +81,14 @@
                         "http_proxy": "localhost:9909",
                         "img": "bft:node",
                         "name": "lan",
-                        "type": "debian"
+                        "type": "debian_lan"
                     },
                     {
                         "color": "cyan",
                         "http_proxy": "localhost:9910",
                         "img": "bft:node",
                         "name": "lan2",
-                        "type": "debian"
+                        "type": "debian_lan"
                     }
                 ],
                 "type": "docker-factory"
