requirements txt: add pandas
- add pip install: pandas

Signed-off-by: jiusheng <jiusheng_kuo@compalbn.com>
Change-Id: If4b1d21ac91c4f19fd308f7fc7b1075f4f4ec372
Signed-off-by: jiusheng <jiusheng_kuo@compalbn.com>
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/8060
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ marshmallow<3 #required for cdrouter https://github.com/qacafe/cdrouter.py/issue
 matplotlib
 nested_lookup==0.2.19
 netaddr
+pandas
 pexpect
 pre-commit
 psutil
