No need to explicitely track Marshmallow with CDRouter>=0.5.5
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: Ic8c2270e98974f91b89ae4915ec9aad5cf7166f9
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/8240
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Chetan Sharma <chsharma.contractor@libertyglobal.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aenum
 argparse
 beautifulsoup4
 boto3
-cdrouter
+cdrouter>=0.5.5
 debtcollector
 distro
 dlipower
@@ -15,7 +15,6 @@ future
 ipaddress
 jira
 jsonschema
-marshmallow<3 #required for cdrouter https://github.com/qacafe/cdrouter.py/issues/5
 matplotlib
 nested_lookup==0.2.19
 netaddr
