Running tests on push - no verbose
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: I46aa1ea849ed55eed8f3908fa6d4121447338081
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/8640
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Kottesvaran Murugan <mkottesvaran.contractor@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -98,19 +98,19 @@ repos:
       hooks:
           - id: unittests
             name: unittests
-            entry: pytest -v
+            entry: pytest
             language: python
             pass_filenames: false
-            args: [unittests]
+            args: [--disable-warnings, -r N, unittests]
             stages: [push]
             verbose: true
     - repo: local
       hooks:
           - id: integrationtests
             name: integrationtests
-            entry: pytest -v
+            entry: pytest
             language: python
             pass_filenames: false
-            args: [integrationtests]
+            args: [--disable-warnings, -r N, integrationtests]
             stages: [push]
             verbose: true
