Extra tweaks for gitignore
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: I46a67d3811464bf53013b3f252884c1223fa1cc3
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/9892

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,23 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# Test results
+results/
+report.html
+report.xml
+style.css
+
+# Text editor temporally files
+*.swp
+
+
+# Alternate config files
+*.json
+
+# Patch foo
+*.rej
+*.orig
+
+# geckodriver log
+geckodriver.log
