bf_node: get dockerfiles in bytes stream
Rename bft-node to python package bf_node
Use bf_node.get_dockerfile with <img>:<tag> as input
the code will return back the contents in bytes

Signed-off-by: ketan.tewari <ktewari.contractor@libertyglobal.com>
Change-Id: I4232dbf19a93739cf0cdf83cfc6263d0aadeccd7
Signed-off-by: Ketan Tewari <ktewari@libertyglobal.com>
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/11012
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/boardfarm/bf_node/Dockerfile
+++ b/boardfarm/bf_node/Dockerfile
@@ -40,10 +40,10 @@ RUN apt-get update && \
 # sudo service apparmor stop
 # sudo service apparmor teardown
 
-RUN mkdir /var/run/sshd
-RUN sed -i 's/.*PermitRootLogin.*/PermitRootLogin yes/' /etc/ssh/sshd_config
-RUN sed -i 's/.*GatewayPorts.*/GatewayPorts yes/' /etc/ssh/sshd_config
-RUN sed -i 's/.*PermitTunnel.*/PermitTunnel yes/' /etc/ssh/sshd_config
+RUN mkdir /var/run/sshd && \
+    sed -i 's/.*PermitRootLogin.*/PermitRootLogin yes/' /etc/ssh/sshd_config && \
+    sed -i 's/.*GatewayPorts.*/GatewayPorts yes/' /etc/ssh/sshd_config && \
+    sed -i 's/.*PermitTunnel.*/PermitTunnel yes/' /etc/ssh/sshd_config
 
 # The following lines compile a shim to bind a process to an IP address
 # using LD_PRELOAD. To run the shim use the following syntax:
