Fix: pulling black pre-commit from psf
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: If96e1c80b4b7dba9427848a9b917797bfcb6c79c
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/12182

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -77,7 +77,7 @@ repos:
           - id: yamllint
             args: [--format, parsable, --strict]
             stages: [commit]
-    - repo: https://github.com/ambv/black
+    - repo: https://github.com/psf/black
       rev: 21.5b1
       hooks:
           - id: black
