Ensure pyupgrade and flynt run at pre-commit stage
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: If2660819f3226032153e14464cf41c2615432a23
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/12492

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -66,6 +66,15 @@ repos:
             language: python
             types: [python]
             stages: [commit]
+    - repo: https://github.com/asottile/pyupgrade
+      rev: v2.15.0
+      hooks:
+          - id: pyupgrade
+            args: [--py36-plus]
+    - repo: https://github.com/ikamensh/flynt/
+      rev: '0.63'
+      hooks:
+          - id: flynt
     - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
       rev: 0.1.0
       hooks:
