Fix: run pyupgrade and flynt only on pre-commit and not on other git events
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: I25ba39f25bd08376332339d79bb254629ced4f24
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/12502

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -71,10 +71,12 @@ repos:
       hooks:
           - id: pyupgrade
             args: [--py36-plus]
+            stages: [commit]
     - repo: https://github.com/ikamensh/flynt/
       rev: '0.63'
       hooks:
           - id: flynt
+            stages: [commit]
     - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
       rev: 0.1.0
       hooks:
