Fix: exclude tab rules from cm-cfg folders
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: Id7145a71b194a13ffc1b775aa128b797c89894dd
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/12509

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
           - id: mixed-line-ending
             stages: [commit]
           - id: trailing-whitespace
+            exclude: cm-cfg
             stages: [commit]
           - id: check-docstring-first
             stages: [commit]
@@ -40,10 +41,12 @@ repos:
           - id: remove-crlf
             stages: [commit]
           - id: remove-tabs
+            exclude: cm-cfg
             stages: [commit]
           - id: forbid-crlf
             stages: [commit]
           - id: forbid-tabs
+            exclude: cm-cfg
             stages: [commit]
     - repo: https://github.com/myint/eradicate
       rev: v2.0.0
