bf_node: Dockerfile: add rfkill to base bft:node
Signed-off-by: Ketan Tewari <ktewari@libertyglobal.com>
Change-Id: Ic010315ba7367d994f1e5e57d127392200800465
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/12850
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>
Tested-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/boardfarm/bf_node/Dockerfile
+++ b/boardfarm/bf_node/Dockerfile
@@ -34,7 +34,8 @@ RUN apt-get update && \
     iw \
     wpasupplicant \
     ntpdate \
-    build-essential
+    build-essential \
+    rfkill
 
 # NOTE: apparmor will interfere with dhclient, disable on HOST by running:
 # sudo service apparmor stop
