build(pyproject.toml): add flake8-docstrings checks
Signed-off-by: Filippo Carra <karrukola@users.noreply.github.com>
Change-Id: I161dc1c42e09603f6e02d3f8b0e18d559c5062ab
Reviewed-on: http://cicd.lgirdk.com/gerrit/c/github/boardfarm/+/13216
Reviewed-by: Filippo Carra <fcarra@libertyglobal.com>
Tested-by: Filippo Carra <fcarra@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@
             "black",
             "flake8",
             "flake8-bugbear",
+            "flake8-docstrings",
             "flake8-rst",
             "flake8-rst-docstrings",
             "mypy",
