fix(kamailio.cfg): modify configurations to use nonce value only once for authentication
by default the nonce_expiry time is set to 300 seconds and hence for every REGISTER request with old nonce value within this time, kamilio does not unauthorize the request

Signed-off-by: Ayush Singhal <aysinghal.contractor@libertyglobal.com>
Change-Id: Ibf515b596371ebc4385b688425bffff46d4ff6a0
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/13743
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/boardfarm/resources/configs/kamailio.cfg
+++ b/boardfarm/resources/configs/kamailio.cfg
@@ -376,6 +376,10 @@ modparam("auth_db", "password_column", "password")
 modparam("auth_db", "load_credentials", "")
 modparam("auth_db", "use_domain", MULTIDOMAIN)
 
+# ----- auth params -----
+#!ifdef WITH_AUTH
+modparam("auth", "one_time_nonce", 1)
+
 # ----- permissions params -----
 #!ifdef WITH_IPAUTH
 modparam("permissions", "db_url", DBURL)
