fix(resources:configs:kamailio.cfg): configure kamailio to send "181 Call is Being Forwarded" packet on call forward busy
Signed-off-by: Ayush Singhal <aysinghal.contractor@libertyglobal.com>
Change-Id: I568ac4b082b891b0b09c442eb275984fbbec1a9b
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/14083
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/boardfarm/resources/configs/kamailio.cfg
+++ b/boardfarm/resources/configs/kamailio.cfg
@@ -558,6 +558,7 @@ route[FORWARD]
     if (!t_relay()) {
         sl_reply_error();
     }
+    sl_reply("181", "Call is Being Forwarded");
     drop;
 }
 
