--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,9 +108,11 @@
     ]
     tag_format = "$version"
     version = "2021.44.0"
+    bump_message = "Bump version to $new_version"
     version_files = [
         "boardfarm/__init__.py:version",
         "pyproject.toml:version",
+        "pyproject.toml:current",
     ]
 
 [tool.isort]
@@ -137,25 +139,11 @@ regex = '''
 message_template = "Bump to {new_version}"
 tag_template = "{new_version}"
 
-# For each file to patch, add a [[tool.tbump.file]] config
+# For each file to patch, there is a [[tool.tbump.file]] config
 # section containing the path of the file, relative to the
-# tbump.toml location.
+# pyproject.toml location.
 [[tool.tbump.file]]
 src = "boardfarm/__init__.py"
 
 [[tool.tbump.file]]
 src = "pyproject.toml"
-
-# You can specify a list of commands to
-# run after the files have been patched
-# and before the git commit is made
-
-#  [[tool.tbump.before_commit]]
-#  name = "check changelog"
-#  cmd = "grep -q {new_version} Changelog.rst"
-
-# Or run some commands after the git tag and the branch
-# have been pushed:
-#  [[tool.tbump.after_push]]
-#  name = "publish"
-#  cmd = "./publish.sh"
