fix(pylint): Add pylint config and fix pylint issues.
Signed-off-by: Oleksii Popov <opopov.contractor@libertyglobal.com>
Change-Id: I6a99d3fdf549c72ae30015f2c32548bb41607bba
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/14179
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Muhammed Toheed Niaz <mniaz.contractor@libertyglobal.com>
Reviewed-by: Filippo Carra <fcarra@libertyglobal.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -117,6 +117,12 @@ repos:
             stages: [commit]
     - repo: local
       hooks:
+          - id: pylint
+            name: pylint
+            entry: pylint
+            language: system
+            types: [python]
+            args: [-rn, -sn]
           - id: unittests
             name: unittests
             entry: pytest
