feat(quagga-pim): add IGMP multicast routing for interface
Allows WAN interface to create multicast groups

Signed-off-by: Ketan Tewari <ktewari@libertyglobal.com>
Change-Id: I8bcae03afb76aa1655ba626a9181aaebc2365da8
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/14004
Tested-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/boardfarm/bf_node/quagga/zebra.conf
+++ b/boardfarm/bf_node/quagga/zebra.conf
@@ -31,6 +31,10 @@ interface lo
 interface eth1
  ip address 172.25.1.1/24
  ipv6 address 2001:dead:beef:2::1/64
+ no ipv6 nd suppress-ra
+ ipv6 nd router-preference high
+ no ipv6 nd managed-config-flag
+ no ipv6 nd other-config-flag
 !
 !
 ! Static AFTR routes
