feat(quagga): add mrouted daemon
Allows multicast forwarding using DVMRP

Signed-off-by: Ketan Tewari <ktewari@libertyglobal.com>
Change-Id: I056b7f7555c4567d0e3d2c110ed7ec9d2d580d6a
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/14367
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/boardfarm/bf_node/quagga/Dockerfile
+++ b/boardfarm/bf_node/quagga/Dockerfile
@@ -11,7 +11,10 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     isc-dhcp-relay \
     openssh-server \
     iputils-ping \
-    dnsutils
+    dnsutils \
+    curl \
+    gnupg \
+    kmod
 
 # Configure SSH
 RUN mkdir /var/run/sshd && \
@@ -35,11 +38,23 @@ RUN mkdir /var/run/quagga \
     ;echo 'net.ipv6.conf.default.disable_ipv6 = 0' >> /etc/sysctl.conf \
     ;echo 'net.ipv6.conf.default.accept_ra = 2' >> /etc/sysctl.conf \
     ;echo 'net.ipv6.conf.all.accept_ra = 2' >> /etc/sysctl.conf \
+    ;echo 'net.ipv4.conf.all.rp_filter = 0' >> /etc/sysctl.conf \
     ## Enable vlan
     ;echo 8021q >> /etc/modules \
     ;ldconfig \
     ## Set Precedence to IPv4
     ;sed -i 's/#precedence ::ffff:0:0\/96  100/precedence ::ffff:0:0\/96  100/' /etc/gai.conf
+
+
+# Install DVMRP daemon and monit
+RUN curl -sS https://deb.troglobit.com/pubkey.gpg | apt-key add - \
+    ;echo "deb [arch=amd64] https://deb.troglobit.com/debian stable main" | \
+    tee /etc/apt/sources.list.d/troglobit.list \
+    ;echo "deb http://ftp.de.debian.org/debian buster-backports main" | \
+    tee /etc/apt/sources.list.d/buster-backports.list \
+    ;apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    mrouted \
+    monit
 
 # Copy Quagga Daemon configs
 COPY ripd.conf /etc/quagga/ripd.conf
