fix(pyproject.toml): pin dependency for selenium version 3.141.0
BOARDFARM-1602

Signed-off-by: Ayush Singhal <aysinghal.contractor@libertyglobal.com>
Change-Id: Ide36f601f901d81049f601c2e81102d7aee98824
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/14639
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@
         "pyvirtualdisplay",
         "requests",
         "retry",
-        "selenium",
+        "selenium<=3.141.0",
         "simplejson",
         "tabulate",
         "termcolor",
