Revert "fix(pyproject.toml): pin dependency for selenium version 3.141.0"
This reverts commit 39a404a5ca8e2806a87feba9b225fba3b5a4a9e7.

Reason for revert: 
Fails slave builder for rel2022b

Change-Id: Ib9cdcdc7518d00a59893d06056ca040772e59872
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/14665
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
(cherry picked from commit d1d564a045170fbf702c99c30b9c380d2e211f23)
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/14667

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@
         "pyvirtualdisplay",
         "requests",
         "retry",
-        "selenium<=3.141.0",
+        "selenium",
         "simplejson",
         "tabulate",
         "termcolor",
