--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@
     [project.optional-dependencies]
         dev = [
             "black",
+            "commitizen >=2.20.0",
             "flake8",
             "flake8-bugbear",
             "flake8-docstrings",
@@ -94,6 +95,7 @@
         Source = "https://github.com/lgirdk/boardfarm"
 
 [tool.commitizen]
+    bump_message = "Bump version to $new_version"
     name = "cz_conventional_commits"
     style = [
         ["qmark", "fg:#ff9d00 bold"],
@@ -109,7 +111,6 @@
     ]
     tag_format = "$version"
     version = "2022.05.0"
-    bump_message = "Bump version to $new_version"
     version_files = [
         "boardfarm/__init__.py:version",
         "pyproject.toml:version",
@@ -119,16 +120,16 @@
 [tool.isort]
     profile = "black"
 [tool.tbump]
-# Uncomment this if your project is hosted on GitHub:
-# github_url = "https://github.com/<user or organization>/<project>/"
+    # Uncomment this if your project is hosted on GitHub:
+    # github_url = "https://github.com/<user or organization>/<project>/"
 
-[tool.tbump.version]
-current = "2022.05.0"
+    [tool.tbump.version]
+        current = "2022.05.0"
 
-# Example of a semver regexp.
-# Make sure this matches current_version before
-# using tbump
-regex = '''
+        # Example of a semver regexp.
+        # Make sure this matches current_version before
+        # using tbump
+        regex = '''
   (?P<major>\d+)
   \.
   (?P<minor>\d+)
@@ -136,15 +137,15 @@ regex = '''
   (?P<patch>\d+)
   '''
 
-[tool.tbump.git]
-message_template = "Bump to {new_version}"
-tag_template = "{new_version}"
+    [tool.tbump.git]
+        message_template = "Bump to {new_version}"
+        tag_template     = "{new_version}"
 
-# For each file to patch, there is a [[tool.tbump.file]] config
-# section containing the path of the file, relative to the
-# pyproject.toml location.
-[[tool.tbump.file]]
-src = "boardfarm/__init__.py"
+    # For each file to patch, there is a [[tool.tbump.file]] config
+    # section containing the path of the file, relative to the
+    # pyproject.toml location.
+    [[tool.tbump.file]]
+        src = "boardfarm/__init__.py"
 
-[[tool.tbump.file]]
-src = "pyproject.toml"
+    [[tool.tbump.file]]
+        src = "pyproject.toml"
