--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@
         "pyvirtualdisplay",
         "requests",
         "retry",
-        "selenium",
+        "selenium>=4.1.0, <5.0",
         "simplejson",
         "tabulate",
         "termcolor",
