--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@
         "distro",
         "dlipower",
         "easysnmp",
-        "elasticsearch",
+        "elasticsearch<8,>=7",
         "Faker",
         "influxdb",
         "jira",
