--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@
         "pyserial",
         "pysmi",
         "pysnmp",
-        "pyvirtualdisplay",
+        "pyvirtualdisplay==2.2",
         "requests",
         "retry",
         "selenium>=4.1.0, <5.0",
