fix(pyproject.toml): freeze pyvirtualdisplay package version to 2.2
Signed-off-by: Oleksii Popov <opopov.contractor@libertyglobal.com>
Change-Id: I339a1be24d23029a92bd722f23dce1c911fdd1d3
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/14777
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@
         "pyserial",
         "pysmi",
         "pysnmp",
-        "pyvirtualdisplay",
+        "pyvirtualdisplay==2.2",
         "requests",
         "retry",
         "selenium",
