refactor(pyproject.toml): freeze selenium dependency to 4.1.0
This allows us to avoid breaking change in selenium >4.2.0 See selenium.dev/blog/2022/python-locators-se4/ for details

Change-Id: I9586caef7f28d4932f2ff653308fd9a1c72c32e0
Signed-off-by: Oleksii Popov <opopov.contractor@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/14805
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Ayush Singhal <aysinghal.contractor@libertyglobal.com>
Reviewed-by: Filippo Carra <fcarra@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@
         "pyvirtualdisplay==2.2",
         "requests",
         "retry",
-        "selenium>=4.1.0, <5.0",
+        "selenium==4.1.0",
         "simplejson",
         "tabulate",
         "termcolor",
