fix(pyproject.toml): freeze pylint dependency to last working version
Signed-off-by: Muhammad Toheed Niaz <mniaz.contractor@libertyglobal.com>
Change-Id: I09391ca4a1b84f73bf7586a1f03842b06f9aaffd
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/15138
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Filippo Carra <fcarra@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@
             "flake8-rst-docstrings",
             "mypy",
             "pre-commit",
-            "pylint",
+            "pylint<2.13.0,>=2.10.0",
             "types-termcolor",
         ]
         doc = ["sphinx"]
