--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@
             "flake8-rst-docstrings",
             "mypy",
             "pre-commit",
-            "pylint<2.13.0,>=2.10.0",
+            "pylint==2.13.3",
             "types-termcolor",
         ]
         doc = ["sphinx"]
