build(pre-commit-config.yaml,pyproject.toml): freeze flake8-bugbear dependency
Signed-off-by: Muhammad Toheed Niaz <mniaz.contractor@libertyglobal.com>
Change-Id: I1e5294942ebbb142f3e8064d43c3eab9fd898735
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/15167
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
(cherry picked from commit 8bb0c98248e4101d26af1be23b5642fb3add9d1c)
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/15182
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,13 +71,13 @@
             "black",
             "commitizen >=2.20.0",
             "flake8",
-            "flake8-bugbear",
+            "flake8-bugbear==22.1.11",
             "flake8-docstrings",
             "flake8-rst",
             "flake8-rst-docstrings",
             "mypy",
             "pre-commit",
-            "pylint==2.13.3",
+            "pylint==2.12.2",
             "types-termcolor",
         ]
         doc = ["sphinx"]
