fix(dockerfiles): fix missing debian binay packages
BOARDFARM-1837

Signed-off-by: Musthafa Kariyaparambil <mkariyaparambil.contractor@libertyglobal.com>
Change-Id: Ia45be4be587341e44bc6aa7b8ecdcbb7b8c19eaa
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/15243
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Brijesh Gajera <bgajera.contractor@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/dockerfiles/quagga/Dockerfile
+++ b/dockerfiles/quagga/Dockerfile
@@ -1,26 +1,33 @@
-FROM debian:buster-slim
+FROM debian_ssh_server
 
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    traceroute \
-    telnet \
-    bash \
-    quagga \
-    iproute2 \
-    iptables \
-    net-tools\
-    isc-dhcp-relay \
-    openssh-server \
-    iputils-ping \
-    dnsutils \
-    curl \
-    gnupg \
-    kmod
+# Install packages required for the following repositories.
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ca-certificates=20200601~deb10u2 \
+    curl=7.64.0-4+deb10u2 \
+    gnupg=2.2.12-1+deb10u1
 
-# Configure SSH
-RUN mkdir /var/run/sshd && \
-    sed -i 's/.*PermitRootLogin.*/PermitRootLogin yes/' /etc/ssh/sshd_config && \
-    sed -i 's/.*GatewayPorts.*/GatewayPorts yes/' /etc/ssh/sshd_config && \
-    sed -i 's/.*PermitTunnel.*/PermitTunnel yes/' /etc/ssh/sshd_config
+# Add DVMRP daemon and monit repositories
+RUN curl -sS https://deb.troglobit.com/pubkey.gpg | apt-key add - \
+    ; echo "deb [arch=amd64] https://deb.troglobit.com/debian stable main" \
+    | tee /etc/apt/sources.list.d/troglobit.list \
+    ; echo "deb http://ftp.de.debian.org/debian buster-backports main" \
+    | tee /etc/apt/sources.list.d/buster-backports.list
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    dnsutils=1:9.11.5.P4+dfsg-5.1+deb10u6 \
+    iproute2=4.20.0-2+deb10u1 \
+    iptables=1.8.2-4 \
+    iputils-ping=3:20180629-2+deb10u2 \
+    isc-dhcp-relay=4.4.1-2+deb10u1 \
+    kmod=26-1 \
+    monit=1:5.27.1-1~bpo10+1 \
+    mrouted=4.4 \
+    net-tools=1.60+git20180626.aebd88e-1 \
+    quagga=1.2.4-3 \
+    telnet=0.17-41.2 \
+    traceroute=1:2.1.0-2 \
+    && rm -rf /var/lib/apt/lists/*
 
 # Quagga configurations
 RUN mkdir /var/run/quagga \
@@ -45,17 +52,6 @@ RUN mkdir /var/run/quagga \
     ## Set Precedence to IPv4
     ;sed -i 's/#precedence ::ffff:0:0\/96  100/precedence ::ffff:0:0\/96  100/' /etc/gai.conf
 
-
-# Install DVMRP daemon and monit
-RUN curl -sS https://deb.troglobit.com/pubkey.gpg | apt-key add - \
-    ;echo "deb [arch=amd64] https://deb.troglobit.com/debian stable main" | \
-    tee /etc/apt/sources.list.d/troglobit.list \
-    ;echo "deb http://ftp.de.debian.org/debian buster-backports main" | \
-    tee /etc/apt/sources.list.d/buster-backports.list \
-    ;apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    mrouted \
-    monit
-
 # Copy Quagga Daemon configs
 COPY ripd.conf /etc/quagga/ripd.conf
 COPY zebra.conf /etc/quagga/zebra.conf
@@ -66,8 +62,6 @@ RUN chown -R quagga /etc/quagga \
     ;chown quagga /var/run/quagga \
     ;chown quagga /var/log/quagga \
     ;chmod +x /root/init
-
-RUN echo "root:bigfoot1" | chpasswd
 
 ENV PATH "/sbin:/bin:/usr/sbin:/usr/bin"
 ENTRYPOINT [ "/root/init" ]
