fix(quagga): allows addition of more interfaces
Pass the interfaces to be added as cmd line args.
Quagga will wait till these interfaces get pushed.
Default configuration will be only for eth1 and aux0.
Any new interface will require to mount respective
zebra and ripd conf file while deploying.

Signed-off-by: Ketan Tewari <ktewari@libertyglobal.com>
Change-Id: I642ba77b7b26fb1d8fa02c576ae46695bd9e9263
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/15401
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/dockerfiles/quagga/Dockerfile
+++ b/dockerfiles/quagga/Dockerfile
@@ -63,5 +63,9 @@ RUN chown -R quagga /etc/quagga \
     ;chown quagga /var/log/quagga \
     ;chmod +x /root/init
 
+RUN echo "root:bigfoot1" | chpasswd
+
+EXPOSE 22
+
 ENV PATH "/sbin:/bin:/usr/sbin:/usr/bin"
 ENTRYPOINT [ "/root/init" ]
