feat: add LinuxLAN, LinuxWAN, AxirosACS implementations
Signed-off-by: Oleksii Popov <opopov.contractor@libertyglobal.com>
Change-Id: Ib0cc0a3309aaa26e941c08c90aa5709821c1e256
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/15413
Reviewed-by: Musthafa Kariyaparambil <mkariyaparambil.contractor@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/.pylintrc
+++ b/.pylintrc
@@ -24,7 +24,7 @@ ignore=CVS
 
 # Add files or directories matching the regex patterns to the ignore-list. The
 # regex matches against paths and can be in Posix or Windows format.
-ignore-paths=unittests/*,integrationtests/*
+ignore-paths=unittests/*,integrationtests/*,scripts/*,automation/*
 
 # Files or directories matching the regex patterns are skipped. The regex
 # matches against base names, not paths.
@@ -78,7 +78,7 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=
+disable=W0511
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -243,7 +243,8 @@ good-names=i,
            k,
            ex,
            Run,
-           _
+           _,
+           e
 
 # Good variable names regexes, separated by a comma. If names match any regex,
 # they will always be accepted
