feat: uses interact with ptpython
Signed-off-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Change-Id: I539e2e3f0c71fae6a84d3c8ace0f75dff3b1cff0
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/15426
Reviewed-by: Musthafa Kariyaparambil <mkariyaparambil.contractor@libertyglobal.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -135,6 +135,8 @@ repos:
       rev: v0.920
       hooks:
           - id: mypy
+            additional_dependencies:
+                - types-termcolor
             name: mypy
             entry: mypy
             language: python
