feat(noxfile.py,tox.ini): test boardfarm on multiple python environments
BOARDFARM-1890

Signed-off-by: Musthafa Kariyaparambil <mkariyaparambil.contractor@libertyglobal.com>
Change-Id: I6963ec831271f2d82fded690917f3172a97ff33e
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/15466
Reviewed-by: Filippo Carra <fcarra@libertyglobal.com>
Tested-by: Filippo Carra <fcarra@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@
         "pexpect",
         "pluggy>=1.0.0",
         "netaddr",
-        "ptipython==1.0.1",
+        "ptipython",
         "pysmi",
         "termcolor",
     ]
@@ -41,6 +41,7 @@
             "flake8-rst",
             "flake8-rst-docstrings",
             "mypy",
+            "nox",
             "pre-commit",
             "pylint",
             "types-ipaddress",
