--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -105,40 +105,12 @@ repos:
             description: 'Black: The uncompromising Python code formatter'
             args: [--safe]
             stages: [commit]
-    - repo: https://gitlab.com/pycqa/flake8
-      rev: 3.9.2
-      hooks:
-          - id: flake8
-            additional_dependencies:
-                - flake8-docstrings
-                - flake8-rst
-                - flake8-rst-docstrings
-                - flake8-bugbear
-            stages: [commit]
     - repo: local
       hooks:
-          - id: pylint
-            name: pylint
-            entry: pylint
+          - id: nox
+            name: nox
+            entry: nox
             language: system
-            types: [python]
-            args: [-rn, -sn]
-          - id: unittests
-            name: unittests
-            entry: pytest
-            language: python
-            pass_filenames: false
-            args: [--disable-warnings, -r N, unittests]
             stages: [push]
-            verbose: true
-    - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v0.920
-      hooks:
-          - id: mypy
-            additional_dependencies:
-                - types-termcolor
-            name: mypy
-            entry: mypy
-            language: python
-            types_or: [python, pyi]
-            stages: [commit]
+            pass_filenames: false
+            types: [python]
