--- a/.pylintrc
+++ b/.pylintrc
@@ -9,7 +9,9 @@ extension-pkg-allow-list=
 # be loaded. Extensions are loading into the active Python interpreter and may
 # run arbitrary code. (This is an alternative name to extension-pkg-allow-list
 # for backward compatibility.)
-extension-pkg-whitelist=
+extension-pkg-whitelist=pydantic
+# please refer this link to understand why pydantic has been added
+# https://github.com/samuelcolvin/pydantic/issues/1961
 
 # Return non-zero exit code if any of these messages/categories are detected,
 # even if score is above --fail-under value. Syntax same as enable. Messages
