build(pyproject.toml): remove unnecessary dependencies
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: I9d001e27c964dc4d8253b22836da3bb838625fbe
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/16230
Reviewed-by: Nathuriga Sevvel <nsevvel.contractor@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@
     dependencies = [
         "aenum",
         "apscheduler",
+        "beautifulsoup4",
         "boto3",
         "cdrouter>=0.5.5",
         "debtcollector",
@@ -37,7 +38,6 @@
         "jc",
         "jsonschema",
         "matplotlib",
-        "mitmproxy",
         "nested_lookup",
         "netaddr",
         "ouimeaux",
@@ -52,11 +52,11 @@
         "pyserial",
         "pysmi",
         "pysnmp",
+        "pytest",                                      # see tests folder
         "pyvirtualdisplay==2.2",
         "requests",
         "retry",
         "selenium==4.1.0",
-        "simplejson",
         "tabulate",
         "termcolor",
         "xmltodict",
