build(pyproject.toml): remove dependency on unittests2
unittests2 is broken in Python 3.10, but not in 3.9.
As unittests2 is a backport to Python2 it is safe to remove the dependency for 3.9 as well.

verified with the following nox script.

"""Lint and test boardfarm on multiple python environments."""
import nox

_PYTHON_VERSIONS = ["3.9", "3.10"]
nox.options.error_on_external_run = True

@nox.session(python=_PYTHON_VERSIONS)
def lint(session: nox.Session) -> None:
    """Lint boardfarm."""
    session.install("--upgrade", "pip")
    session.install("--upgrade", "pip", "wheel")
    session.install("--upgrade", "pip", "wheel", ".[dev]")
    session.run("black", ".", "--check")
    session.run("isort", ".", "--check-only")
    session.run("flake8", "boardfarm")
    # session.run("mypy", "boardfarm")

@nox.session(python=_PYTHON_VERSIONS)
def pylint(session: nox.Session) -> None:
    """Lint boardfarm using pylint without dev dependencies."""
    session.install("--upgrade", "pip")
    session.install("--upgrade", "pip", "wheel")
    session.install("--upgrade", "pip", "wheel", ".", "pylint")
    # boardfarm-lgi-shared is needed because boardfarm imports, but it should
    # not be a dependency, as it creates a cycle.
    session.install("--upgrade", "pip", "wheel", ".", "pylint", "boardfarm-lgi-shared")
    session.run("pylint", "boardfarm")

@nox.session(python=_PYTHON_VERSIONS)
def test(session: nox.Session) -> None:
    """Test boardfarm."""
    session.install("--upgrade", "pip")
    session.install("--upgrade", "pip", "wheel")
    # boardfarm-lgi-shared is needed because boardfarm imports, but it should
    # not be a dependency, as it creates a cycle.
    session.install("--upgrade", "pip", "wheel", ".[test]", "boardfarm-lgi-shared")
    session.run("pytest", "unittests")

Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: I9e3f819b561382b07548ddcf103a94957a5452c7
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/16316
Tested-by:

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,6 @@
         "simplejson",
         "tabulate",
         "termcolor",
-        "unittest2",
         "xmltodict",
         "xvfbwrapper",
         "zeep",
@@ -81,6 +80,7 @@
         ]
         doc = ["sphinx"]
         test = [
+            "ftfy",
             "pytest",
             "pytest-cov",
             "pytest-html",
