build(pyproject.toml): add nox to list of dependencies
This is needed as an additional step because the pipelines do not properly install their dependencies.

Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: I9f93ac0545f38ac2b734c0d7e0d462818e13b0de
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/16412

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@
             "flake8-rst",
             "flake8-rst-docstrings",
             "mypy",
+            "nox",
             "pre-commit",
             "pylint==2.14.1",
             "types-termcolor",
